--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
+/* src/components/SplashScreen.css */
+/* src/App.css */
+/* SplashScreen.css */
+
+.animate-grow {
+    animation: grow 5s ease-in-out forwards;
+  }
+  
+  @keyframes grow {
+    from {
+      transform: scale(1);
+    }
+    to {
+      transform: scale(2.0); /* Adjust the final scale as needed */
+    }
+  }
+  
+.app {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .main-content {
+    opacity: 1;
+    transition: opacity 0.5s ease-in;
+  }
+  
+.splash-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000; /* or any color you prefer */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Ensure splash screen is on top */
+    transition: opacity 0.5s ease-in;
+  }
+  
+  .splash-logo {
+    width: 200px; /* Adjust as needed */
+    height: auto;
+  }
+  
 .table-header th,
 .table-body td {
   /* Consistent column width */
